# advent_of_code_2021

./: Cargo.toml  out.txt
d01/: Cargo.toml
d01/src/: main_2.rs
day01/: Cargo.toml
day01/src/: main_1.rs
day02/: Cargo.toml
day02/src/: main_1.rs  main_2.rs
day03/: Cargo.toml
day03/src/: main_1.rs  main_2.rs
day04/: Cargo.toml
day04/src/: main_1.rs  main_2.rs
day05/: Cargo.toml
day05/src/: main_1.rs  main_2.rs
day06/: Cargo.toml
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main_1.rs  main_2.rs
day08/: Cargo.toml
day08/src/: main_1.rs  main_2.rs
day09/: Cargo.toml
day09/src/: main_1.rs  main_2.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main_1.rs  main_2.rs
day13/: Cargo.toml
day13/src/: main.rs
day14/: Cargo.toml
day14/src/: main_1.rs  main_2.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/src/: main.rs
day19/: Cargo.toml
day19/src/: main.rs
day20/: Cargo.toml
day20/src/: main.rs
