[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"

[[bin]]
name = "day03_1"
path = "src/main_1.rs"

[[bin]]
name = "day03_2"
path = "src/main_2.rs"