[package]
name = "day09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10"

[[bin]]
name = "day09_1"
path = "src/main_1.rs"

[[bin]]
name = "day09_2"
path = "src/main_2.rs"