[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
anyhow = "1.0"
itertools = "0.10"
rand = { version = "0.8", features = ["small_rng"]}
nalgebra = "0.29"
rayon = "1.5"